week9/docker-kubernetes-helm/containerisation/k8s/monitoring/hello-sample-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: hello-app-deployment
  labels:
    app: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "2Mi"
            cpu: "2m"
          limits:
            memory: "4Mi"
            cpu: "3m"
