week9/docker-kubernetes-helm/containerisation/k8s/monitoring/hello-sample-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: hello-app
  namespace: default
spec:
  rules:
    - host: sample-app.devops-masterclass.link
      http:
        paths:
          - backend:
              serviceName: hello-app-service
              servicePort: 8080
            path: /
          - backend:
              serviceName: missing-backend
              servicePort: 8080
            path: /do-not-exists
  tls:
      - hosts:
          - sample-app.devops-masterclass.link
        secretName: sample-app.devops-masterclass.link
